--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,5 @@
 {% extends "layout.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<h1>Welcome to Wiki Search.Here is home page.</h1>
-<p>This is a simple web app that helps you find summaries of information on Wikipedia quickly.</p>
-<h2>Get Started</h2>
-<p>Please choose search button on the top(navigation links).</p>
+<p>This is the home page. It's not exciting yet...</p>
 {% endblock %}
